--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "fbc9eb58",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "c90e8936",
    "metadata": {},
    "outputs": [
@@ -880,6 +880,244 @@
     "    output_names=[\"output\"],\n",
     "    opset_version=12\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e9221aa",
+   "metadata": {},
+   "source": [
+    "# Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3db48e4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ResNet(\n",
+       "  (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+       "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (relu): ReLU(inplace=True)\n",
+       "  (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+       "  (layer1): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer2): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer3): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer4): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
+       "  (fc): Linear(in_features=512, out_features=8, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_classes = len(full_dataset.classes)\n",
+    "model = resnet18(weights=\"IMAGENET1K_V1\")\n",
+    "model.fc = torch.nn.Linear(model.fc.in_features, num_classes)\n",
+    "\n",
+    "model.load_state_dict(torch.load(\"model.pth\", map_location=\"cpu\"))\n",
+    "\n",
+    "model.eval()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "151ba7cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torchvision import transforms\n",
+    "from PIL import Image\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "def predict_image(model, image_path, class_names):\n",
+    "    transform = transforms.Compose([\n",
+    "        transforms.Resize(256),\n",
+    "        transforms.CenterCrop(224),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(\n",
+    "            mean=[0.485, 0.456, 0.406],\n",
+    "            std=[0.229, 0.224, 0.225]\n",
+    "        ),\n",
+    "    ])\n",
+    "\n",
+    "    image = Image.open(image_path).convert(\"RGB\")\n",
+    "    input_tensor = transform(image).unsqueeze(0)\n",
+    "\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(input_tensor)\n",
+    "        probabilities = F.softmax(outputs, dim=1)[0]\n",
+    "\n",
+    "    results = {class_names[i]: float(probabilities[i]) for i in range(len(class_names))}\n",
+    "\n",
+    "    return results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dcd003c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted: battery (100.00%)\n",
+      "battery: 100.00%\n",
+      "biological: 0.00%\n",
+      "cardboard: 0.00%\n",
+      "clothes: 0.00%\n",
+      "glass: 0.00%\n",
+      "metal: 0.00%\n",
+      "paper: 0.00%\n",
+      "plastic: 0.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_names = full_dataset.classes\n",
+    "result = predict_image(model, \"test/battery1.jpg\", class_names)\n",
+    "\n",
+    "top_class = max(result, key=result.get)\n",
+    "print(f\"Predicted: {top_class} ({result[top_class]*100:.2f}%)\")\n",
+    "\n",
+    "for cls, prob in result.items():\n",
+    "    print(f\"{cls}: {prob*100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "80e6f328",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "battery1.jpg: predicted battery (100.00%) | true: battery | ✓\n",
+      "biological1.jpg: predicted biological (99.88%) | true: biological | ✓\n",
+      "cardboard1.jpg: predicted cardboard (99.57%) | true: cardboard | ✓\n",
+      "clothes1.jpg: predicted clothes (99.95%) | true: clothes | ✓\n",
+      "glass1.jpg: predicted glass (95.51%) | true: glass | ✓\n",
+      "metal1.jpg: predicted metal (99.84%) | true: metal | ✓\n",
+      "paper1.jpg: predicted plastic (58.57%) | true: paper | ✗\n",
+      "plastic1.jpg: predicted plastic (60.30%) | true: plastic | ✓\n",
+      "\n",
+      "Accuracy: 87.50%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "\n",
+    "for filename in os.listdir(\"test\"):\n",
+    "    if not filename.lower().endswith((\".jpg\", \".png\", \".jpeg\")):\n",
+    "        continue\n",
+    "\n",
+    "    image_path = os.path.join(\"test\", filename)\n",
+    "\n",
+    "    # Extract label from filename (everything before the first digit)\n",
+    "    true_label = ''.join([c for c in filename if not c.isdigit()]).split('.')[0]\n",
+    "\n",
+    "    result = predict_image(model, image_path, class_names)\n",
+    "    predicted_label = max(result, key=result.get)\n",
+    "\n",
+    "    is_correct = predicted_label.lower() == true_label.lower()\n",
+    "    total += 1\n",
+    "    correct += int(is_correct)\n",
+    "\n",
+    "    print(f\"{filename}: predicted {predicted_label} ({result[predicted_label]*100:.2f}%) | true: {true_label} | {'✓' if is_correct else '✗'}\")\n",
+    "\n",
+    "accuracy = (correct / total) * 100 if total > 0 else 0\n",
+    "print(f\"\\nAccuracy: {accuracy:.2f}%\")\n"
    ]
   }
  ],
